--- a/5_Pins/style.css
+++ b/5_Pins/style.css
@@ -9,6 +9,7 @@ body {
     justify-content: space-between;
     align-items: center;
     padding: 0 20px;
+    flex-wrap: wrap;
 }
 
 .mainNav {
@@ -43,13 +44,11 @@ body {
     background-color: #333333;
 }
 
-
 .mainNav img {
     max-width: 100%;
     height: auto;
     margin-bottom: 10px;
 }
-
 
 .searchBar {
     display: flex;
@@ -57,7 +56,8 @@ body {
     border-radius: 30px;
     overflow: hidden;
     width: 600px;
-    margin: 20px 300px 20px 20px;
+    margin: 20px;
+    flex-grow: 1;
 }
 
 label {
@@ -86,3 +86,31 @@ input[type="text"] {
 }
 
 
+.custom-div-icon {
+    background-color: #FFC107;
+    border-radius: 50%;
+    width: 20px;
+    height: 20px;
+}
+
+/* Responsive adjustments */
+@media (max-width: 768px) {
+    .NavSearchGroup {
+        flex-direction: column;
+    }
+
+    .searchBar, .mainNav {
+        width: auto;
+        margin: 10px;
+    }
+
+    .mainNav button {
+        width: 100%;
+    }
+}
+
+@media (max-width: 480px) {
+    .mainNav button, input[type="text"] {
+        font-size: 14px;
+    }
+}
